<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".ConsumptionActivity">

    <FrameLayout
        android:id="@+id/vg_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|top"
            android:contentDescription="@string/btn_back"
            android:focusable="true"
            android:elevation="16dp"
            android:clickable="true"
            android:src="@drawable/baseline_arrow_back_24"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_screen_top"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:contentDescription="@string/consumption_car"
                android:paddingTop="200dp"
                android:layout_width="250dp"
                android:layout_height="320dp"
                android:layout_gravity="center"
                android:src="@drawable/car_distance" />

        </LinearLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/destination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination_distance"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vg_header"/>

    <TextView
        android:id="@+id/step_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step_3"
        android:textStyle="normal"
        android:textColor="@color/red"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/destination"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hintEnabled="false"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/step_2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_car_distance"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/distance_input_hint"
            android:background="@drawable/rounded_bg"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"
        android:textStyle="bold"
        android:textColor="@color/blue"/>

</androidx.constraintlayout.widget.ConstraintLayout>