<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/vg_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_screen_top"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:contentDescription="@string/car"
            android:paddingTop="200dp"
            android:layout_width="250dp"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:src="@drawable/car" />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:maxLines="2"
        android:textSize="42sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vg_header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info"
        android:maxLines="2"
        android:textSize="13sp"
        android:layout_marginHorizontal="52dp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />
    
    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="16dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>