<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".ResultActivity">

<LinearLayout
    android:id="@+id/vg_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:orientation="vertical"
    android:background="@drawable/bg_result_top">

<TextView
    android:id="@+id/tv_result"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textStyle="bold"
    android:textSize="64sp"
    android:gravity="center"
    tools:text="$50.0"
    android:textColor="@color/blue"
    android:layout_marginTop="52dp"
    android:layout_marginBottom="52dp" />
</LinearLayout>

    <TextView
        android:id="@+id/tv_revision_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vg_header"
        android:layout_marginBottom="48dp"
        android:textColor="@color/white"
        android:text="@string/revision"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:foregroundGravity="center_horizontal"
        android:paddingHorizontal="58dp"
        app:layout_constraintTop_toBottomOf="@id/tv_revision_data">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/container_result"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/price_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/container_result"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="1.7" />

        <TextView
            android:id="@+id/consumption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:text="@string/consumption"/>

        <TextView
            android:id="@+id/consumption_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/price_value"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="5.0" />

        <TextView
            android:id="@+id/km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="gravity"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consumption"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginEnd="50dp"
            android:textColor="@color/white"
            android:text="@string/km"/>

        <TextView
            android:id="@+id/km_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/consumption_value"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="50dp"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:text="150.0" />



    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <Button
        android:id="@+id/btn_new_calc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_new_calc"
        android:textColor="@color/blue"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>